# zenith-wrangler

./: .gitignore  AGENTS.md  CODEX.md  README.md  SKILLS.md  TOOLS.md  pyproject.toml  requirements.txt  wrangler.py
.codex/environments/: environment.toml
backend/: errors.py  main.py  schemas.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  pages.test.jsx  styles.css
frontend/src/components/: AppShell.jsx  PlotlyChart.jsx
frontend/src/pages/: ResultsPage.jsx  RunPage.jsx  SessionsPage.jsx  UpdatePage.jsx
src/: __init__.py  config.py  models.py
src/agents/: __init__.py  analyzer.py  navigator.py  orchestrator.py  patcher.py
src/dashboard/: __init__.py  builder.py  templates.py
src/logging/: __init__.py  session.py
src/services/: __init__.py  application.py  artifacts.py
src/tooling/: __init__.py  specs.py
src/tools/: __init__.py  cleaning.py  loaders.py  transforms.py  visualization.py
tests/: test_analyzer.py  test_backend_api.py  test_dashboard_builder.py  test_models.py  test_orchestrator.py  test_patcher.py  test_session_logger.py  test_tooling.py  test_transforms.py  test_visualization.py  test_wrangler.py
zenith_wrangler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
