[project]
name = "zenith-wrangler"
version = "0.1.0"
description = "AI-powered data dashboard generator"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "dash>=2.17",
  "dash-bootstrap-components>=1.6",
  "loguru>=0.7",
  "openai>=1.40",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "xlrd>=2.0.1",
  "plotly>=5.22",
  "pyarrow>=16.0",
  "pydantic>=2.7",
  "polars>=0.20",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
]

[project.scripts]
zenith-wrangler = "wrangler:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["wrangler"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = true
